[package]
name = "delegation-mock"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/delegation.rs"
[dependencies.dharitri-sc]
version = "0.12.3"

[dependencies.itertools]
version = "0.10.1"
default-features = false
[dev-dependencies.dharitri-sc-scenario]
version = "0.12.3"
