[package]
name = "liquid-staking"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.dharitri-sc]
version = "0.12.3"

[dependencies.dharitri-sc-modules]
version = "0.12.3"

[dependencies.delegation-mock]
path = "../delegation-mock"
[dev-dependencies.dharitri-sc-scenario]
version = "0.12.3"
